test/sema/exercise/struct_argument.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number
}

struct S2 {
  x: number
}

fn foo(s: S): void {}

fn main(): void {
  foo(S {x: 0});
  foo(S2 {x: 0});
  // CHECK: [[# @LINE - 1 ]]:10: error: expected 'S' argument, but received 'S2'
}